# dce-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  sailfish.toml
assets/docs/: README-zh-session.md  README-zh.md
assets/templates/: home.html
crates/macro/: Cargo.toml
crates/macro/src/: funcs.rs  lib.rs  router.rs
crates/protocols/cli/: Cargo.toml
crates/protocols/cli/src/: protocol.rs
crates/protocols/hyper/: Cargo.toml
crates/protocols/hyper/src/: lib.rs  protocol.rs  request.rs  serializer.rs
crates/protocols/hyper/templates/: status.html
crates/protocols/tokio/: Cargo.toml
crates/protocols/tokio-tungstenite/: Cargo.toml
crates/protocols/tokio-tungstenite/src/: protocol.rs
crates/protocols/tokio/src/: protocol.rs
crates/router/: Cargo.toml
crates/router/macro/: Cargo.toml
crates/router/macro/src/: funcs.rs  lib.rs  macros.rs  router.rs
crates/router/src/: api.rs  lib.rs  protocol.rs  request.rs  router.rs  serializer.rs
crates/router/src/router/: api.rs  protocol.rs  request.rs  router.rs  serializer.rs
crates/router/src/util/: atom_tree.rs  mem.rs  mod.rs  string.rs
crates/session/: Cargo.toml  README.md
crates/session/src/: auto.rs  connection.rs  lib.rs  redis.rs  session.rs  user.rs
crates/session/tests/: basic.rs  common.rs  user.rs
crates/util/: Cargo.toml
crates/util/src/: atom_tree.rs  lib.rs  mixed.rs  string.rs
src/: main-sync.rs  main.rs
src/apis/: cli.rs  clients.rs  http.rs  session.rs  session_sync.rs  session_ws.rs  tcp.rs  udp.rs  websocket.rs
