[package]
name = "dce"
description = "Just examples for dce libs"
version = "0.1.0"
authors = ["Drunk Tan <hi@idrunk.net>"]
homepage = "https://drunkce.com"
documentation = "https://docs.rs/dce"
repository = "https://github.com/idrunk/dce-rust"
keywords = ["dce", "router"]
categories = ["command-line-utilities", "network-programming", "web-programming"]
edition = "2021"

[[bin]]
name = "cli"
path = "src/main-sync.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[workspace]
members = [ "crates/*", "crates/protocols/*", ]
exclude = [ "crates/protocols", ]

[features]
default = ["async"]
async = ["dce-hyper", "dce-tokio", "dce-tokio-tungstenite", "dce-router/async", "dce-cli/async"]

[dependencies]
hyper = { version = "1.2.0", features = ["full"] }
hyper-util = {  version = "0.1.3", features = ["tokio"] }
http-body-util = "0.1"
futures = { version = "0.3.0", features = ["thread-pool"]}
futures-util = { version = "0.3.28", default-features = false, features = ["std"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
dce-cli = { path = "crates/protocols/cli", version = "0.*", default-features = false }
dce-hyper = { path = "crates/protocols/hyper", version = "0.*", optional = true }
dce-tokio = { path = "crates/protocols/tokio", version = "0.*", optional = true }
dce-tokio-tungstenite = { path = "crates/protocols/tokio-tungstenite", version = "0.*", optional = true }
dce-router = { path = "crates/router", version = "0.*", default-features = false }
env_logger = "0.11.2"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
sailfish = "0.8.3"
chrono = "0.4.34"
url = "2.5.0"
futures-channel = "0.3.28"
rand = { version = "0.8.5", features = [] }
