[package]
name = "dce-macro"
description = "The macros for the dce-router lib"
version = "0.1.0"
authors = ["Drunk Tan <hi@idrunk.net>"]
homepage = "https://drunkce.com"
documentation = "https://docs.rs/dce-macro"
repository = "https://github.com/idrunk/dce-rust"
keywords = ["dce", "macro"]
categories = ["config"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.58"
quote = "1.0.27"
syn = {version = "2.0.16",features = ["full","fold"]}
dce-util = { path = "../util", version = "0.*" }
dce-router = { path = "../router", version = "0.*" }
