[package]
name = "dce-util"
description = "Utils for dce framework."
version = "1.0.0"
authors = ["Drunk Tan <hi@idrunk.net>"]
homepage = "https://drunkce.com"
documentation = "https://docs.rs/dce-util"
repository = "https://github.com/idrunk/dce-rust"
keywords = ["dce", "util"]
license = "MIT"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
