[package]
name = "dce-cli"
description = "A cli routable protocol implementation for dce-router"
version = "1.0.0"
authors = ["Drunk Tan <hi@idrunk.net>"]
homepage = "https://drunkce.com"
documentation = "https://docs.rs/dce-cli"
repository = "https://github.com/idrunk/dce-rust"
keywords = ["cli", "router"]
categories = ["command-line-interface"]
license = "MIT"
edition = "2021"

[features]
default = ["async"]
async = ["dce-router/async", "async-trait"]
session = ["dce-router/session"]

[dependencies]
async-trait = { version = "0.1.73", optional = true }
dce-util = { path = "../../util", version = "1.*" }
dce-macro = { path = "../../macro", version = "1.*" }
dce-router = { path = "../../router", version = "1.*", default-features = false }
log = "0.4.20"
