[package]
name = "dce-hyper"
description = "A http routable protocol implementation for dce-router"
version = "0.1.0"
authors = ["Drunk Tan <hi@idrunk.net>"]
homepage = "https://drunkce.com"
documentation = "https://docs.rs/dce-hyper"
repository = "https://github.com/idrunk/dce-rust"
keywords = ["http", "router"]
categories = ["web-programming::http-server"]
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
hyper = { version = "1.2.0", features = ["http1", "http2", "server"] }
http-body-util = "0.1"
dce-util = { path = "../../util", version = "0.*" }
dce-macro = { path = "../../macro", version = "0.*" }
dce-router = { path = "../../router", version = "0.*" }
async-trait = "0.1.73"
log = "0.4.20"
sailfish = "0.8.3"
