[package]
name = "dce-hyper"
description = "A http routable protocol implementation for dce-router"
version = "1.0.0"
authors = ["Drunk Tan <hi@idrunk.net>"]
homepage = "https://drunkce.com"
documentation = "https://docs.rs/dce-hyper"
repository = "https://github.com/idrunk/dce-rust"
keywords = ["http", "router"]
categories = ["web-programming::http-server"]
license = "MIT"
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
session = ["dce-session", "dce-router/session"]

[dependencies]
hyper = { version = "1.2.0", features = ["http1", "http2", "server"] }
http-body-util = "0.1"
dce-util = { path = "../../util", version = "1.*" }
dce-macro = { path = "../../macro", version = "1.*" }
dce-router = { path = "../../router", version = "1.*" }
dce-session = { path = "../../session", version = "1.*", optional = true }
async-trait = "0.1.73"
log = "0.4.20"
sailfish = { version = "0.8.3", optional = true }
